GH-229: Expose `recordMetadataChannel` for producer binding
Fixes: https://github.com/spring-cloud/spring-cloud-stream-binder-aws-kinesis/issues/229

Such a channel is set as an `outputChannel` to the producer `MessageHandler`.
In async mode (default), this handler producers a reply from AWS.
The target application should subscribe to this channel and would be able
to analyze shard and sequence for the produced record from message headers sent to that channel